--- a/assets/base.css
+++ b/assets/base.css
@@ -256,7 +256,8 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 }
 
 .text-body {
-  font-size: 1.5rem;
+  // font-size: 1.5rem;
+  font-size: var(--text-body-size);
   letter-spacing: 0.06rem;
   line-height: calc(1 + 0.8 / var(--font-body-scale));
   font-family: var(--font-body-family);
@@ -282,10 +283,28 @@ h5,
   color: rgb(var(--color-foreground));
   line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
   word-break: break-word;
+  text-wrap: wrap;
+}
+
+@media screen and (min-width: 1024px) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  .h0,
+  .h1,
+  .h2,
+  .h3,
+  .h4,
+  .h5 {
+    text-wrap: balance;
+  }
 }
 
 .hxl {
   font-size: calc(var(--font-heading-scale) * 5rem);
+  color: var(--color-display-heading);
 }
 
 @media only screen and (min-width: 750px) {
@@ -296,6 +315,7 @@ h5,
 
 .h0 {
   font-size: calc(var(--font-heading-scale) * 4rem);
+  color: var(--color-display-heading);
 }
 
 @media only screen and (min-width: 750px) {
@@ -307,6 +327,7 @@ h5,
 h1,
 .h1 {
   font-size: calc(var(--font-heading-scale) * 3rem);
+  color: var(--color-display-heading);
 }
 
 @media only screen and (min-width: 750px) {
@@ -1328,9 +1349,10 @@ button.shopify-payment-button__button--unbranded {
 .button-label,
 .shopify-challenge__button,
 .customer button {
-  font-size: 1.5rem;
+  font-size: calc(var(--text-body-size) * 1.2);
   letter-spacing: 0.1rem;
   line-height: calc(1 + 0.2 / var(--font-body-scale));
+  font-family: var(--font-heading-family);
 }
 
 .button--tertiary {
@@ -2001,7 +2023,7 @@ input[type='checkbox'] {
 }
 
 .quantity__rules {
-  margin-top: 0.5rem;
+  margin-top: 1.2rem;
   position: relative;
   font-size: 1.2rem;
 }
@@ -2102,10 +2124,10 @@ product-info .loading-overlay:not(.hidden) ~ *,
 
 .cart-count-bubble {
   position: absolute;
-  background-color: rgb(var(--color-button));
+  background-color: rgba(var(--color-button), 0.8);
   color: rgb(var(--color-button-text));
-  height: 1.7rem;
-  width: 1.7rem;
+  height: 1.37rem;
+  width: 1.37rem;
   border-radius: 100%;
   display: flex;
   justify-content: center;
@@ -2114,6 +2136,11 @@ product-info .loading-overlay:not(.hidden) ~ *,
   bottom: 0.8rem;
   left: 2.2rem;
   line-height: calc(1 + 0.1 / var(--font-body-scale));
+}
+
+.cart-count-bubble {
+  top: 0.1rem;
+  left: 23%;
 }
 
 /* utility-bar */
@@ -2400,7 +2427,7 @@ product-info .loading-overlay:not(.hidden) ~ *,
 
   .header--middle-left {
     grid-template-areas: 'heading navigation icons';
-    grid-template-columns: auto auto 1fr;
+    grid-template-columns: auto 1fr auto;
     column-gap: 2rem;
   }
 
@@ -2564,14 +2591,14 @@ product-info .loading-overlay:not(.hidden) ~ *,
 
 .header__icon,
 .header__icon--cart .icon {
-  height: 4.4rem;
-  width: 4.4rem;
+  height: 2.4rem;
+  width: 2.4rem;
   padding: 0;
 }
 
 .header__icon--cart {
   position: relative;
-  margin-right: -1.2rem;
+  /* margin-right: -1.2rem; */
 }
 
 .header__icon--menu[aria-expanded='true']::before {
@@ -2774,7 +2801,8 @@ details[open] > .header__submenu {
 
 @media screen and (min-width: 990px) {
   .header__inline-menu {
-    display: block;
+    display: flex;
+    justify-content: flex-end;
   }
 
   .header--top-center .header__inline-menu {
@@ -2809,7 +2837,7 @@ details[open] > .header__submenu {
 }
 
 .header__menu-item:hover span {
-  text-decoration: underline;
+  // text-decoration: underline;
   text-underline-offset: 0.3rem;
 }
 
