--- a/assets/component-list-menu.css
+++ b/assets/component-list-menu.css
@@ -13,9 +13,74 @@
   outline: none;
 }
 
+.list-menu li,
+.list-menu li:hover {
+  text-decoration: none;
+}
+
+.header__inline-menu .list-menu__item {
+  font-family: var(--font-heading-family);
+  font-size: calc(var(--text-body-size) * 1.35);
+  letter-spacing: -0.02rem;
+  text-decoration: none;
+  transition: all 200ms ease;
+}
+
+.header__inline-menu .list-menu__item:hover {
+  text-decoration: none;
+  color: var(--color-hex-dip-nectar);
+}
+
+.header__inline-menu  .list-menu__item span,
+.header__inline-menu  .list-menu__item a {
+  text-decoration: none;
+}
+
+.header__inline-menu .list-menu__item span:hover,
+.header__inline-menu .list-menu__item a:hover {
+  text-decoration: none;
+}
+
+.footer .list-menu__item {
+  font-family: var(--font-body-family);
+  letter-spacing: 0.05rem;
+  text-decoration: none;
+  transition: all 200ms ease;
+  color: rgb(var(--color-rgb-dip-slate));
+  overflow: hidden;
+  position: relative;
+}
+
+.footer .list-menu__item:hover {
+  text-decoration: none;
+  color: var(--color-hex-dip-nectar);
+}
+
+.footer .list-menu__item::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 6px;
+  width: 0;
+  height: 1px;
+  background: var(--color-hex-dip-nectar);
+  transition: width 200ms, transform 600ms;
+  transform: translateX(0);
+  transform-origin: left;
+  
+}
+
+.footer .list-menu__item:hover::after {
+  width: 100%;
+  transform: translateX(100%);
+  transform-origin: right;
+  transition: width 0.3s;
+}
+
 .list-menu__item--active {
-  text-decoration: underline;
+  text-decoration: none;
   text-underline-offset: 0.3rem;
+  color: rgb(var(--color-rgb-dip-nectar))
 }
 
 .list-menu__item--active:hover {
