--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -38,6 +38,11 @@ slideshow-component .slideshow.banner {
   }
 }
 
+.slideshow__link {
+  width: 100%;
+  height: 100%;
+}
+
 .slideshow__text.banner__box {
   display: flex;
   flex-direction: column;
@@ -106,12 +111,17 @@ slideshow-component .slideshow.banner {
 }
 
 .slideshow__controls {
-  border: 0.1rem solid rgba(var(--color-foreground), 0.08);
+  border: 0.1rem solid rgba(var(--color-rgb-dip-smoke), 0.08);
+  position: absolute;
+  bottom: 0;
+  z-index: 100;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .slideshow__controls--top {
   order: 2;
-  z-index: 1;
+  z-index: 100;
 }
 
 @media screen and (max-width: 749px) {
@@ -125,11 +135,11 @@ slideshow-component .slideshow.banner {
   border-bottom: none;
 }
 
-@media screen and (min-width: 750px) {
-  .slideshow__controls {
-    position: relative;
-  }
-}
+// @media screen and (min-width: 750px) {
+//   .slideshow__controls {
+//     position: absolute;
+//   }
+// }
 
 slideshow-component:not(.page-width) .slider-buttons {
   border-right: 0;
@@ -180,11 +190,11 @@ slideshow-component:not(.page-width) .slider-buttons {
 }
 
 .slideshow__autoplay path {
-  fill: rgba(var(--color-foreground), 0.75);
+  fill: rgba(var(--color-rgb-dip-smoke), 0.75);
 }
 
 .slideshow__autoplay:hover path {
-  fill: rgb(var(--color-foreground));
+  fill: rgb(var(--color-rgb-dip-smoke));
 }
 
 @media screen and (forced-colors: active) {
