--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -79,9 +79,10 @@
 }
 
 .multicolumn-card-spacing {
-  padding-top: 2.5rem;
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
+  padding-top: 0rem;
+  margin-left: 0rem;
+  margin-right: 0rem;
+  padding-bottom: 0rem;
 }
 
 .multicolumn-card__info > :nth-child(2) {
@@ -131,8 +132,104 @@
   margin: 0;
 }
 
+.multicolumn-card__escape-link {
+  text-decoration: none;
+  color: rgb(var(--color-foreground));
+}
+
 .multicolumn-card__info {
+  padding: 0rem;
+}
+
+.multicolumn-card__info--hoverable {
   padding: 2.5rem;
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: all 500ms ease-in-out;
+}
+
+@media screen and (min-width: 750px) {
+  .multicolumn-card__info--hoverable {
+    width: 96%;
+
+  }
+}
+
+.multicolumn-card__info--hoverable::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  background: rgba(0,0,0, 0.8);
+  transition: all 300ms ease-in-out;
+  opacity: 0.9;
+  pointer-events: none;
+  z-index: 0;
+  backdrop-filter: blur(8px);
+}
+
+.multicolumn-card__info--hoverable:hover::after {
+  opacity: 0.5;
+  backdrop-filter: blur(3px);
+}
+
+.multicolumn-card__info--hoverable .feature-wrap {
+  position: absolute;
+  width: 90%;
+  height: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.2rem;
+  gap: 1.4dvh;
+  left: 0;
+  right: 0;
+  color: rgb(var(--color-rgb-dip-smoke));
+  z-index: 1;
+}
+
+.multicolumn-card__info--hoverable .feature-heading {
+  line-height: calc(0.5 + 0.01 / max(1, var(--font-heading-scale)));
+}
+
+.multicolumn-card__info--hoverable .feature-wrap .feature-details,
+.multicolumn-card__info--hoverable .feature-wrap .link {
+  opacity: 0.75;
+  transition: all 500ms ease-in-out;
+}
+
+.multicolumn-card__info--hoverable:hover .feature-wrap .feature-details,
+.multicolumn-card__info--hoverable:hover .feature-wrap .link {
+  opacity: 1;
+}
+
+.multicolumn-card__info--hoverable .feature-wrap .button {
+  text-transform: uppercase;
+  font-family: var(--font-frontage-condensed);
+  background: rgb(var(--color-background));
+  color: rgb(var(--color-foreground));
+  border: none;
+  outline: none;
+  letter-spacing: -0.025rem;
+  font-size: clamp(1.5rem, 1vw, 2rem);
+  width: fit-content;
+  margin-top: 3.2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.multicolumn-card__info--hoverable .feature-wrap .button::after {
+  box-shadow: none;
 }
 
 .background-none .multicolumn-card__info {
@@ -146,7 +243,7 @@
 }
 
 .background-none .multicolumn-card__image-wrapper + .multicolumn-card__info {
-  padding-top: 2.5rem;
+  padding-top: 0;
 }
 
 .background-none .slider .multicolumn-card__info {
