fixed font face urls for custom fonts

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -83,9 +83,9 @@
 
       @font-face {
         font-family: 'Frontage Condensed';
-        src: url({{ 'juri-zaech_-_frontage_condensed_bold-webfont.woff2' | asset_url }}) format('woff2'),
-              url({{ 'juri-zaech_-_frontage_condensed_bold-webfont.woff' | asset_url }}) format('woff'),
-              url({{ 'juri-zaech_-_frontage_condensed_bold-webfont.ttf' | asset_url }}) format('truetype');
+        src: url({{ 'juri-zaech_-_frontage_condensed_bold-webfont.woff2' | font_url }}) format('woff2'),
+              url({{ 'juri-zaech_-_frontage_condensed_bold-webfont.woff' | font_url }}) format('woff'),
+              url({{ 'juri-zaech_-_frontage_condensed_bold-webfont.ttf' | font_url }}) format('truetype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
@@ -93,9 +93,9 @@
 
       @font-face {
         font-family: 'Work Sans';
-        src: url({{ 'worksans-variablefont_wght-webfont.woff2' | asset_url }}) format('woff2'),
-            url({{ 'worksans-variablefont_wght-webfont.woff' | asset_url }}) format('woff'),
-            url({{ 'worksans-variablefont_wght-webfont.ttf' | asset_url }}) format('truetype');
+        src: url({{ 'worksans-variablefont_wght-webfont.woff2' | font_url }}) format('woff2'),
+            url({{ 'worksans-variablefont_wght-webfont.woff' | font_url }}) format('woff'),
+            url({{ 'worksans-variablefont_wght-webfont.ttf' | font_url }}) format('truetype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
@@ -103,9 +103,9 @@
 
       @font-face {
         font-family: 'Oswald';
-        src: url({{ 'oswald-variablefont_wght-webfont.woff2' | asset_url }}) format('woff2'),
-            url({{ 'oswald-variablefont_wght-webfont.woff' | asset_url }}) format('woff'),
-            url({{ 'oswald-variablefont_wght-webfont.ttf' | asset_url }}) format('truetype');
+        src: url({{ 'oswald-variablefont_wght-webfont.woff2' | font_url }}) format('woff2'),
+            url({{ 'oswald-variablefont_wght-webfont.woff' | font_url }}) format('woff'),
+            url({{ 'oswald-variablefont_wght-webfont.ttf' | font_url }}) format('truetype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
@@ -113,9 +113,9 @@
 
       @font-face {
         font-family: 'Space Mono';
-        src: url({{ 'spacemono-regular-webfont.woff2' | asset_url }}) format('woff2'),
-            url({{ 'spacemono-regular-webfont.woff' | asset_url }}) format('woff'),
-            url({{ 'spacemono-regular-webfont.ttf' | asset_url }}) format('truetype');
+        src: url({{ 'spacemono-regular-webfont.woff2' | font_url }}) format('woff2'),
+            url({{ 'spacemono-regular-webfont.woff' | font_url }}) format('woff'),
+            url({{ 'spacemono-regular-webfont.ttf' | font_url }}) format('truetype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
