fixed font face urls for custom fonts

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -83,9 +83,9 @@
 
       @font-face {
         font-family: 'Frontage Condensed';
-        src: url({{ 'juri-zaech_-_frontage_condensed_bold-webfont.woff2' | font_url }}) format('woff2'),
-              url({{ 'juri-zaech_-_frontage_condensed_bold-webfont.woff' | font_url }}) format('woff'),
-              url({{ 'juri-zaech_-_frontage_condensed_bold-webfont.ttf' | font_url }}) format('truetype');
+        src: url('https://cdn.shopify.com/s/files/1/0242/3501/6273/files/juri_zaech_-_frontage_condensed_bold-webfont.woff2?v=1694647743') format('woff2'),
+              url('https://cdn.shopify.com/s/files/1/0242/3501/6273/files/juri_zaech_-_frontage_condensed_bold-webfont.woff?v=1694647744') format('woff'),
+              url('https://cdn.shopify.com/s/files/1/0242/3501/6273/files/juri_zaech_-_frontage_condensed_bold-webfont.ttf?v=1694647743') format('truetype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
