fixed font face urls for custom fonts

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -93,9 +93,9 @@
 
       @font-face {
         font-family: 'Work Sans';
-        src: url({{ 'worksans-variablefont_wght-webfont.woff2' | font_url }}) format('woff2'),
-            url({{ 'worksans-variablefont_wght-webfont.woff' | font_url }}) format('woff'),
-            url({{ 'worksans-variablefont_wght-webfont.ttf' | font_url }}) format('truetype');
+        src: url('https://cdn.shopify.com/s/files/1/0242/3501/6273/files/worksans-variablefont_wght-webfont.woff2?v=1694750977') format('woff2'),
+            url('https://cdn.shopify.com/s/files/1/0242/3501/6273/files/worksans-variablefont_wght-webfont.woff?v=1694750977') format('woff'),
+            url('https://cdn.shopify.com/s/files/1/0242/3501/6273/files/worksans-variablefont_wght-webfont.ttf?v=1694750977') format('truetype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
@@ -103,9 +103,9 @@
 
       @font-face {
         font-family: 'Oswald';
-        src: url({{ 'oswald-variablefont_wght-webfont.woff2' | font_url }}) format('woff2'),
-            url({{ 'oswald-variablefont_wght-webfont.woff' | font_url }}) format('woff'),
-            url({{ 'oswald-variablefont_wght-webfont.ttf' | font_url }}) format('truetype');
+        src: url('https://cdn.shopify.com/s/files/1/0242/3501/6273/files/oswald-variablefont_wght-webfont.woff2?v=1694647743') format('woff2'),
+            url('https://cdn.shopify.com/s/files/1/0242/3501/6273/files/oswald-variablefont_wght-webfont.woff?v=1694647743') format('woff'),
+            url('https://cdn.shopify.com/s/files/1/0242/3501/6273/files/oswald-variablefont_wght-webfont.ttf?v=1694647744') format('truetype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
@@ -113,9 +113,9 @@
 
       @font-face {
         font-family: 'Space Mono';
-        src: url({{ 'spacemono-regular-webfont.woff2' | font_url }}) format('woff2'),
-            url({{ 'spacemono-regular-webfont.woff' | font_url }}) format('woff'),
-            url({{ 'spacemono-regular-webfont.ttf' | font_url }}) format('truetype');
+        src: url('https://cdn.shopify.com/s/files/1/0242/3501/6273/files/oswald-variablefont_wght-webfont.woff2?v=1694647743') format('woff2'),
+            url('https://cdn.shopify.com/s/files/1/0242/3501/6273/files/spacemono-regular-webfont.woff?v=1694647743') format('woff'),
+            url('https://cdn.shopify.com/s/files/1/0242/3501/6273/files/spacemono-regular-webfont.ttf?v=1694647743') format('truetype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
