--- a/assets/component-price.css
+++ b/assets/component-price.css
@@ -38,14 +38,15 @@
 }
 
 .price--large {
-  font-size: 1.6rem;
+  font-size: calc(var(--text-body-size) * 2);
   line-height: calc(1 + 0.5 / var(--font-body-scale));
   letter-spacing: 0.13rem;
+  font-family: var(--font-monospace-family);
 }
 
 @media screen and (min-width: 750px) {
   .price--large {
-    font-size: 1.8rem;
+    font-size: calc(var(--text-body-size) * 2.5);
   }
 }
 
