--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -328,14 +328,15 @@
         document.documentElement.classList.add('shopify-design-mode');
       }
     </script>
-  <script id="sg-js-global-vars">
-                        sgGlobalVars = {{ shop.metafields['sg-cc']['sg-metafield'] }};
-                        if(sgGlobalVars) {
-                            sgGlobalVars.cart = {{ cart | json }};
-                            sgGlobalVars.currentProduct = {{ product | json }};
-                            sgGlobalVars.isAdmin = {% if content_for_header contains 'adminBarInjector' or content_for_header contains 'previewBarInjector' %}true{% else %}false{% endif %};
-                        }
-                    </script></head>
+    <script id="sg-js-global-vars">
+      sgGlobalVars = {{ shop.metafields['sg-cc']['sg-metafield'] }};
+      if(sgGlobalVars) {
+        sgGlobalVars.cart = {{ cart | json }};
+        sgGlobalVars.currentProduct = {{ product | json }};
+        sgGlobalVars.isAdmin = {% if content_for_header contains 'adminBarInjector' or content_for_header contains 'previewBarInjector' %}true{% else %}false{% endif %};
+      }
+    </script>
+  </head>
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
@@ -406,5 +407,52 @@
 
     <script src="//code.jivosite.com/widget.js" data-jv-id="8LEByLkLYT" async></script>
     <script async type="text/javascript" src="//static.klaviyo.com/onsite/js/klaviyo.js?company_id=LxJrGw"></script>
+
+    <script>
+      window.addEventListener('load', function() {
+        var _learnq = window._learnq || [];
+        function addedToCart() {
+          fetch(`${window.location.origin}/cart.js`)
+          .then(res => res.clone().json().then(data => {
+            var cart = {
+              total_price: data.total_price/100,
+              $value: data.total_price/100,
+              total_discount: data.total_discount,
+              original_total_price: data.original_total_price/100,
+              items: data.items
+            }
+            if (item !== 'undefined') {
+              cart = Object.assign(cart, item)
+            }
+            if (klAjax) {
+                _learnq.push(['track', 'Added to Cart', cart]);
+                klAjax = false;
+              }
+            })
+          )
+        };
+      (function (ns, fetch) {
+        ns.fetch = function() {
+          const response = fetch.apply(this, arguments);
+          response.then(res => {
+            if (`${window.location.origin}/cart/add.js`
+              .includes(res.url)) {
+                addedToCart()
+            }
+          });
+          return response
+        }
+      }(window, window.fetch));
+      var klAjax = true;
+      var atcButtons = document.querySelectorAll("form[action*='/cart/add'] button[type='submit']");
+      for (var i = 0; i < atcButtons.length; i++) {
+        atcButtons[i].addEventListener("click", function() {
+          if (klAjax) {
+            _learnq.push(['track', 'Added to Cart', item]);
+            klAjax = false;
+          }
+        })}
+      });
+    </script>
   </body>
 </html>
