--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -71,6 +71,7 @@
 
 .multicolumn-list h3 {
   line-height: calc(1 + 0.5 / max(1, var(--font-heading-scale)));
+  padding-top: 1rem;
 }
 
 .multicolumn-list h3,
