--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -74,6 +74,19 @@
   padding-top: 1rem;
 }
 
+[data-handle="social-impact"] .multicolumn-list h3 {
+  padding-top: 2rem;
+}
+
+[data-handle="social-impact"] .multicolumn-list p {
+  line-height: calc(1 + 0.75 / max(1, var(--font-heading-scale)));
+  font-size: 85%;
+  letter-spacing: -1px;
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .multicolumn-list h3,
 .multicolumn-list p {
   margin: 0;
