--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -82,9 +82,10 @@
   line-height: calc(1 + 0.75 / max(1, var(--font-heading-scale)));
   font-size: 85%;
   letter-spacing: -1px;
-  width: 85%;
+  max-width: 45ch;
   margin-left: auto;
   margin-right: auto;
+  text-wrap: balance;
 }
 
 .multicolumn-list h3,
@@ -122,6 +123,7 @@
   .multicolumn-list:not(.slider) {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+    gap: 2rem;
   }
 }
 
