--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -81,7 +81,7 @@
 [data-handle="social-impact"] .multicolumn-list p {
   line-height: calc(1 + 0.75 / max(1, var(--font-heading-scale)));
   font-size: 85%;
-  letter-spacing: -1px;
+  letter-spacing: normal;
   max-width: 45ch;
   margin-left: auto;
   margin-right: auto;
