--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -349,7 +349,7 @@
 
     {% sections 'header-group' %}
 
-    <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
+    <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1" data-page="{{ page.handle }}">
       {{ content_for_layout }}
     </main>
 
