--- a/assets/base.css
+++ b/assets/base.css
@@ -3539,6 +3539,7 @@ details-disclosure > details {
   justify-content: space-between;
   width: 100%;
   max-width: 160rem;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 1024px) {
